Feat: Modal Component, Signin page, redux

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
 	--foreground-rgb: 0, 0, 0;
 	--background-start-rgb: 214, 219, 220;
 	--background-end-rgb: 255, 255, 255;
+	--background-rgb: 247, 247, 247;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -16,9 +17,9 @@
 	}
 }
 
-body {
+#signup body {
 	color: rgb(var(--foreground-rgb));
-	/* background:  */
+	background: rgb(var(--background-rgb));
 }
 
 @layer utilities {
