Feat: JobCategory dropdown

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,4 +36,12 @@
 	.form-layout::-webkit-scrollbar {
 		display: none;
 	}
+	.scrollbar-thin::-webkit-scrollbar {
+		width: 5px;
+		/* height: 10px; */
+	}
+	.scrollbar-thin::-webkit-scrollbar-thumb {
+		background: rgb(156, 163, 175);
+		border-radius: 10px;
+	}
 }
