Style: jobGroup Filter arrowIcon click to rotate

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,4 +48,12 @@
 	.active {
 		@apply border-2 border-blue-500 bg-white text-blue-500 font-bold;
 	}
+
+	.toggle {
+		@apply rotate-180 transition;
+	}
+
+	.no-toggle {
+		@apply -rotate-0 transition;
+	}
 }
